# gcf-core-python

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: connect_input_to_output.py  online_learning_scalar_sequence_anomalies.py  test_pooler_classifier_connections.py
python/gcf_core_python_client/: __init__.py  _gcf_core.pyi  api.py
python/gnomics/: __init__.py  api.py  core.pyi
src/: bitarray.rs  block_input.rs  block_memory.rs  block_output.rs  context_learner.rs  discrete_transformer.rs  error.rs  lib.rs  pattern_classifier.rs  pattern_pooler.rs  persistence_transformer.rs  scalar_transformer.rs  sequence_learner.rs
tests/: test_api.py  test_basic.py  test_bitarray.py  test_block_connections_chaining.py  test_block_connections_integration.py  test_block_connections_transformers.py  test_block_input.py  test_block_memory.py  test_block_output.py  test_context_learner.py  test_discrete_transformer.py  test_integration.py  test_pattern_classifier.py  test_pattern_pooler.py  test_persistence_transformer.py  test_properties.py  test_scalar_transformer.py  test_sequence_learner.py  test_sequence_learner_advanced.py
