[package]
name = "gnomics"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
gnomics = { git = "https://github.com/jacobeverist/gcf-core-rust.git", branch = "main" }
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
